# sprint4

./: main.cpp
include/: analyse.hpp
scratch/: test_ast.py
src/: metric.cpp  metric_accumulator.cpp
src/metric_accumulator_impl/: CMakeLists.txt  sum_average_accumulator.cpp
src/metric_accumulator_impl/tests/: average_accumulator.cpp  categorical_accumulator.cpp  sum_average_accumulator.cpp
src/metric_impl/: CMakeLists.txt  code_lines_count.cpp  cyclomatic_complexity.cpp  parameters_count.cpp
src/metric_impl/tests/: code_lines_count.cpp  cyclomatic_complexity.cpp  naming_style.cpp  parameters_count.cpp
